lattigo_ckks_ops/libLATTIGO_HEVM.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 29 "ckks_ops.go"

#include <stdint.h>
#include <stdlib.h>
#include <stdbool.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern void create_context(char* dir);
extern uintptr_t initFullVM(char* dir, _Bool device);
extern uintptr_t initClientVM(char* dir);
extern uintptr_t initServerVM(char* dir);
extern void freeVM(uintptr_t h);
extern void setDebug(uintptr_t h, _Bool enable);
extern void setToGPU(uintptr_t h, _Bool ongpu);
extern void printMem(uintptr_t h);
extern void load(uintptr_t h, char* constPath, char* hevmPath);
extern void loadClient(uintptr_t h, char* constPath);
extern void preprocess(uintptr_t h);
extern void run(uintptr_t h);
extern int64_t getArgLen(uintptr_t h);
extern int64_t getResLen(uintptr_t h);
extern int Slots(uintptr_t h);
extern void encrypt(uintptr_t h, int64_t i, double* dat, int length);
extern void decrypt(uintptr_t h, int64_t i, double* dat);
extern void decrypt_result(uintptr_t h, int64_t i, double* dat);
extern int64_t getResIdx(uintptr_t h, int64_t i);
extern void* getCtxt(uintptr_t h, int64_t id);
extern int getCtxtLevel(uintptr_t h, int64_t id);
extern double getCtxtLog2Scale(uintptr_t h, int64_t id);

#ifdef __cplusplus
}
#endif